--- a/example/example-adapter/example-adapter-rocketmq/src/main/resources/application.yml
+++ b/example/example-adapter/example-adapter-rocketmq/src/main/resources/application.yml
@@ -54,6 +54,6 @@ spring:
         debug: false
 
 rocketmq:
-  name-server: 127.0.0.1:9876
+  name-server: ${rocketmq:127.0.0.1:9876}
   producer:
     group: test
