--- a/example/example-adapter/example-adapter-grpc/src/main/resources/application.yml
+++ b/example/example-adapter/example-adapter-grpc/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: ${nacos:127.0.0.1}:8848
       config:
         server-addr: ${spring.cloud.nacos.discovery.server-addr}
         file-extension: yml
