--- a/example/example-adapter/example-adapter-rabbitmq/src/main/resources/application.yml
+++ b/example/example-adapter/example-adapter-rabbitmq/src/main/resources/application.yml
@@ -8,8 +8,8 @@ spring:
     active: dev
 
   rabbitmq:
-    host: 127.0.0.1
-    port: 5672
+    host: ${rabbitmq:127.0.0.1}
+    port: ${port:5672}
     username: admin
     password: admin
 
