--- a/example/example-zookeeper-cloud/src/main/resources/bootstrap.yml
+++ b/example/example-zookeeper-cloud/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ spring:
     name: dynamic-tp-cloud-zookeeper-demo
   cloud:
     zookeeper:
-      connect-string: 127.0.0.1:2181
+      connect-string: ${zookeeper:127.0.0.1:2181}
       config:
         root: /configserver/dev
       enabled: true
